Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13536

DB_TRX_ID is not actually being reset when the history is removed

    XMLWordPrintable

Details

    Description

      The purpose of MDEV-12288 is to reset the DB_TRX_ID column when the history is being removed. This is not taking place:

      --source include/have_innodb.inc
      CREATE TABLE t1(a INT PRIMARY KEY, b INT NOT NULL) ENGINE=InnoDB;
      INSERT INTO t1 VALUES(1,2),(3,4);
      UPDATE t1 SET b=-3 WHERE a=3;
      # Initiate a full purge, which should reset all DB_TRX_ID.
      SET GLOBAL innodb_fast_shutdown=0;
      --source include/shutdown_mysqld.inc
      

      After running this test, the t1.ibd file page 3 will contain nonzero DB_TRX_ID values.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1d
                  1d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d
                  1d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.